[gd_scene load_steps=6 format=3 uid="uid://gwkakc7xaprr"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_ru8o7"]
[ext_resource type="PackedScene" uid="uid://b1pynidm75s00" path="res://scenes/player.tscn" id="2_buhw2"]

[sub_resource type="Animation" id="Animation_guq12"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D/TransitionFade:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Camera2D/TransitionFade:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Camera2D/TransitionFade:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_6eisx"]
resource_name = "zoom_transition"
length = 0.8
step = 0.05
capture_included = true
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.2, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 2,
"values": [Vector2(5, 5), Vector2(4.8, 4.8), Vector2(4.4, 4.4), Vector2(4, 4), Vector2(4.4, 4.4), Vector2(5.5, 5.5), Vector2(7.5, 7.5), Vector2(10.9, 10.9), Vector2(16, 16), Vector2(23.1, 23.1), Vector2(32.4, 32.4), Vector2(44.5, 44.5), Vector2(59.6, 59.6), Vector2(77.9, 77.9), Vector2(200, 200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.5708, 3.14159, 4.71239, 6.28319]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D/TransitionFade:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.2, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.042, 1.042), Vector2(1.136, 1.136), Vector2(1.25, 1.25), Vector2(1.136, 1.136), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Camera2D/TransitionFade:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.196078), Color(0, 0, 0, 0.482353), Color(0, 0, 0, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Camera2D/TransitionFade:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5icbu"]
_data = {
"RESET": SubResource("Animation_guq12"),
"zoom_transition": SubResource("Animation_6eisx")
}

[node name="Game" type="Node2D" groups=["cells", "monsters"]]
script = ExtResource("1_ru8o7")

[node name="Player" parent="." instance=ExtResource("2_buhw2")]
z_index = 1
position = Vector2(-10, -10)
health = 5

[node name="Camera2D" type="Camera2D" parent="Player"]
ignore_rotation = false
enabled = false
zoom = Vector2(5, 5)

[node name="TransitionFade" type="ColorRect" parent="Player/Camera2D"]
visible = false
modulate = Color(0, 0, 0, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.0
offset_top = -65.0
offset_right = 116.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(116, 65)

[node name="WallContainer" type="Node" parent="."]

[node name="BorderContainer" type="Node" parent="WallContainer"]

[node name="OpenCellContainer" type="Node" parent="."]

[node name="SolutionCellContainer" type="Node" parent="OpenCellContainer"]

[node name="MonsterContainer" type="Node" parent="."]

[node name="PlayerMoveTimer" type="Timer" parent="."]
autostart = true

[node name="MonsterMoveTimer" type="Timer" parent="."]
wait_time = 0.333
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Player")
libraries = {
"": SubResource("AnimationLibrary_5icbu")
}
